# gfw-raster-analysis-lambda

./: .dockerignore  .gitignore  .isort.cfg  .lambdaignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  README.md  api.py  build_package.sh  docker-compose.yml  glad.py  groupby.py  handler.py  invoke_example.py  lambda_function.py  mock_api.py  package.json  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  serverless.yml  setup.py  wsgi.py
.github/workflows/: terraform_build.yaml  terraform_destroy.yaml  terraform_plan.yaml
canaries/: query.py  results.py  zonal.py
data/: area.geojson  area.vrt  extent.geojson  extent.vrt  gain.geojson  gain.vrt  gfw_landcover.geojson  gfw_landcover.vrt  glad.geojson  glad.vrt  idn_landcover.geojson  idn_landcover.vrt  loss10.geojson  loss10.vrt  loss30.geojson  loss30.vrt  loss90.geojson  loss90.vrt  primary_forest.geojson  primary_forest.vrt  sea_landcover.geojson  sea_landcover.vrt
docker/raster_analysis/: .lambdaignore  Dockerfile
docker/terraform/: Dockerfile  docker-compose.yml
docker/test/: .dockerignore  Dockerfile  pytest_entrypoint.sh
docs/: count.html  features.html  index.html  sample.html  tiles.html
geop/: errors.py  geo_utils.py  geoprocessing.py  request_utils.py  tiles.py
lambdas/gateway/: gateway.py
lambdas/raster_analysis/: Dockerfile  build_package.sh  lambda_function.py  setup.py
lambdas/tiled_analysis/: .lambdaignore  Dockerfile  build_package.sh  lambda_function.py
presentation/: readme.md
raster_analysis/: arrays.py  boto.py  data_cube.py  data_environment.py  data_lake.py  exceptions.py  geodesy.py  geometry.py  geoprocessing.py  globals.py  grid.py  io.py  layer.py  numpy_utils.py  query.py  query_executor.py  results_store.py  schemas.py  tiling.py  utils.py  window.py
raster_analysis/data/: analysis-umd-loss-gain.json  glad.geojson  glad.vrt  schema-manifest.json
raster_analysis/layer/: data_cube.py  layer.py  window.py
raster_analysis/serializers/: gfw_api.py
raster_analysis/utilities/: arrays.py  check_extent.py  errors.py  geo_utils.py  geodesy.py  grid.py  grid_id.py  io.py  parse_analysis_manifest.py  util.py
run/: Dockerfile
scripts/: apigateway.tf  cibuild  delete_workspace  infra  publish.sh  setup  setup.sh  terraform  test
serializers/: gfw_api.py
step_functions/: process_list.json.tmpl
terraform/: apigateway.tf  archive.tf  data.tf  dynamodb.tf  iam.tf  lambdas.tf  lifecycle.tf  locals.tf  logging.tf  main.tf  outputs.tf  raster-analysis.tfplan  step_functions.tf  terraform.tfplan  variables.tf  versions.tf
terraform/docker/: docker-compose.yml
terraform/policies/: raster_analysis.json  sts_assume_role_lambda.json  sts_assume_role_states.json
terraform/vars/: raster-analysis-dev.tfvars  raster-analysis-production.tfvars  raster-analysis-staging.tfvars  terraform-dev.tfvars  terraform-production.tfvars  terraform-staging.tfvars
test/: extent_by_landcover_test.py  generate_test_data.py  glad_test.py  landcover_test.py  loss_gain_extent_test.py  test_arrays.py  test_geom_results.json  test_geoms.py  test_geoprocessing.py  test_geoprocessing2.py  test_real_data.py  test_with_rasters.py
test/data/: 10N_100E_area.tif  (+14 more)
testing/: compare_to_umd_api.py  example_2000_IDN_points.js  example_2000_IDN_points.py  simple_cli_time.py
tests/: glad_test.py  loss_gain_extent_test.py  pytest.ini  test_gateway.py  test_geoprocessing.py  test_lambdas.py  test_tiled_analysis.py
tools/: stress_test.py
utilities/: check_extent.py  lulc_util.py  util.py
(+23 files in other folders)
