[project]
name = "gfw-raster-analysis-lambda"
version = "2.0.1"
description = "Add your description here"
requires-python = "~= 3.10.0"
dependencies = [
    "asyncclick",
    "aws-xray-sdk",
    "codeguru-profiler-agent",
    "geobuf",
    "http3",
    "lambda-decorators",
    "mo_parsing",
    "mo_sql_parsing",
    "protobuf",
    "pyproj"
]

[tool.setuptools]
packages = ["raster_analysis"]
